[package]
name = "lark-rs"
version = "0.1.0"
edition = "2018"
description = "Feishu/Lark Open API Rust SDK, Support ALL Open API and Event Callback."
readme = "README.md"
repository = "https://github.com/chyroc/lark-rs"
license-file = "LICENSE"
keywords = ["feishu", "larksuite", "sdk"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
