[package]
name = "example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lark = { path = "../lark" }
futures = "0.3"
tokio = { version = "0.2.22", features = ["full"] }
async-std = { version = "1", features = ["attributes", "tokio1"] }
